style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  color: white;
}

body {
  background: linear-gradient(
    #1354a5 0%,
    #041832 33.33%,
    #041832 66.67%,
    #01080e 100%
  );
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

body::before {
  background-image: url("img/code.png");
  background-repeat: no-repeat;
  background-position: right;
  content: "";
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  opacity: 0.4;
}

.container {
  width: 80%;
  min-height: 50vh;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-radius: 24px;
  border: 1px solid #1875e8;
  box-shadow: 4px 4px 20px 0px rgba(1, 8, 14, 0.15);
  background-image: url("img/Ruido.png");
  background-size: 100% 100%;
  position: relative;
  overflow: hidden;
}

.container__content {
  display: flex;
  align-items: center;
  position: relative;
  width: 100%;
}

.container__info {
  flex: 1;
  padding: 3rem;
}

.container__text {
  margin: 12px 0;
  display: flex;
  flex-direction: column;
}

.container__text-blue {
  color: #1875e8;
  display: block;
}

.container__field {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 12px;
}

.container__input {
  width: 130px;
  height: 72px;
  border-radius: 16px;
  background-color: #fff;
  border: none;
  color: #1875e8;
  padding: 2rem;
  font-size: 24px;
  font-weight: 700;
  font-family: "Inter", sans-serif;
}

.container__buttons {
  display: flex;
  flex-direction: row;
  gap: 1em;
}

.container__button {
  border-radius: 16px;
  background: #1875e8;
  padding: 16px 24px;
  font-size: 24px;
  width: 100%;
  font-weight: 700;
  border: none;
  cursor: pointer;
}

.container__button:disabled {
  background: #6f6f70;
  cursor: not-allowed;
  opacity: 0.6;
}

h1 {
  font-family: "Chakra Petch", sans-serif;
  font-size: 72px;
  font-style: normal;
  font-weight: 700;
  line-height: 100%;
  padding: 2rem;
}

.text__paragraph {
  color: #fff;
  font-family: "Inter";
  font-size: 32px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.container__person-image {
  max-width: 100%;
  height: auto;
  margin-top: 2rem;
}

@media screen and (max-width: 1250px) {
  .container__person-image {
    display: none;
  }

  h1 {
    font-size: 50px;
  }
}

